scrollbar fix on body with particle js

--- a/css/style.css
+++ b/css/style.css
@@ -172,3 +172,12 @@ header {
 	    max-width: 100% !important;
 	}
 }
+
+#backgroundParticle {
+  position: absolute;
+  z-index: 50;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
